--- a/src/main/resources/view/DashboardAdmin.fxml
+++ b/src/main/resources/view/DashboardAdmin.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ancDashBoardAdmin" prefHeight="900.0" prefWidth="1850.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ijse.ayurveda_skin_care.controller.DashboardAdminController">
+<AnchorPane fx:id="ancDashBoardAdmin" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ijse.ayurveda_skin_care.controller.DashboardAdminController">
    <children>
       <HBox prefHeight="900.0" prefWidth="1850.0">
          <children>
