--- a/src/main/resources/view/EquipmentManagement.fxml
+++ b/src/main/resources/view/EquipmentManagement.fxml
@@ -1,14 +1,162 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="view.EquipmentManagement"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="ancCustomerManagement" style="-fx-background-color: fefefe;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ijse.ayurveda_skin_care.controller.CustomerManagementController">
+    <children>
+        <VBox alignment="TOP_CENTER" layoutX="80.0" layoutY="42.0" prefHeight="900.0" prefWidth="1325.0" spacing="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Label text="Equipment Management">
+                    <font>
+                        <Font name="Serif Bold" size="48.0" />
+                    </font>
+                </Label>
+                <HBox prefHeight="275.0" prefWidth="1325.0">
+                    <children>
+                        <VBox alignment="TOP_RIGHT" prefHeight="378.0" prefWidth="395.0" spacing="15.0">
+                            <children>
+                                <Label text="Equipment Id :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Name :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Serial Number :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Perchase Date :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                    <padding>
+                                        <Insets top="5.0" />
+                                    </padding>
+                                </Label>
+                                <Label text="Last Maintenance Date :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Status :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                            <padding>
+                                <Insets right="10.0" top="10.0" />
+                            </padding>
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                        </VBox>
+                        <VBox prefHeight="455.0" prefWidth="552.0" spacing="9.0">
+                            <children>
+                                <Label fx:id="lblEquipmentId" prefHeight="42.0" prefWidth="469.0" text="1">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font name="Serif Bold" size="18.0" />
+                                    </font>
+                                </Label>
+                                <TextField fx:id="txtName" style="-fx-background-radius: 10;">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font></TextField>
+                                <TextField fx:id="txtSerialNumber" style="-fx-background-radius: 10;">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font></TextField>
+                                <TextField fx:id="txtPerchaseDate" style="-fx-background-radius: 10;">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font></TextField>
+                                <TextField fx:id="txtLastMaintenanceDate" style="-fx-background-radius: 10;">
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font>
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                </TextField>
+                                <TextField fx:id="txtStatus" style="-fx-background-radius: 10;">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font></TextField>
+                            </children>
+                            <padding>
+                                <Insets left="10.0" right="30.0" />
+                            </padding>
+                        </VBox>
+                    </children>
+                </HBox>
+                <HBox alignment="TOP_CENTER" prefHeight="11.0" prefWidth="804.0" spacing="50.0">
+                    <children>
+                        <Button fx:id="btnSave" mnemonicParsing="false" onAction="#btnSaveOnAction" style="-fx-background-color: #27ae60; -fx-background-radius: 7;" text="Save" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font></Button>
+                        <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#btnUpdateOnAction" style="-fx-background-color: #2980b9; -fx-background-radius: 7;" text="Update" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font></Button>
+                        <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#btnDeleteOnAction" style="-fx-background-color: #e74c3c; -fx-background-radius: 7;" text="Delete" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font></Button>
+                        <Button fx:id="btnClear" mnemonicParsing="false" onAction="#btnClearOnAction" style="-fx-background-color: #130f40; -fx-background-radius: 7;" text="Clear" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font>
+                        </Button>
+                    </children></HBox>
+                <ScrollPane prefHeight="417.0" prefWidth="1325.0">
+                    <content>
+                        <TableView fx:id="tblEquipmentList" onMouseClicked="#getData" prefHeight="417.0" prefWidth="1319.0">
+                            <columns>
+                                <TableColumn fx:id="colEquipmentId" prefWidth="123.0" text="Equipment Id" />
+                                <TableColumn fx:id="colName" prefWidth="252.0" text="Name" />
+                                <TableColumn fx:id="colSerialNumber" prefWidth="394.0" text="Serial Number" />
+                                <TableColumn fx:id="colPerchaseDate" prefWidth="197.0" text="Perchase Date" />
+                                <TableColumn fx:id="colLastMaintenanceDate" prefWidth="188.0" text="Last Maintenance Date" />
+                                <TableColumn fx:id="colStatus" prefWidth="136.0" text="Status" />
+                            </columns>
+                        </TableView>
+                    </content>
+                </ScrollPane>
+            </children>
+            <padding>
+                <Insets top="30.0" />
+            </padding>
+        </VBox>
+    </children>
 </AnchorPane>
