--- a/src/main/resources/view/InventaryManagement.fxml
+++ b/src/main/resources/view/InventaryManagement.fxml
@@ -3,56 +3,160 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="631.0" prefWidth="837.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ijse.ayurveda_skin_care.controller.InventaryManagementController">
-   <children>
-      <VBox prefHeight="631.0" prefWidth="218.0">
-         <children>
-            <ImageView fitHeight="150.0" fitWidth="224.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../OneDrive/Desktop/16.jpeg" />
-               </image>
-            </ImageView>
-            <HBox prefHeight="498.0" prefWidth="224.0" style="-fx-background-color: #696969;">
-               <children>
-                  <Button mnemonicParsing="false" text="LOGOUT" />
-               </children>
-               <padding>
-                  <Insets left="80.0" top="450.0" />
-               </padding>
-            </HBox>
-         </children>
-      </VBox>
-      <Label layoutX="319.0" layoutY="39.0" prefHeight="34.0" prefWidth="394.0" text="INVENTARY MANAGEMENT">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <TextField layoutX="432.0" layoutY="102.0" prefHeight="26.0" prefWidth="370.0" promptText="SEARCH" />
-      <TableView layoutX="277.0" layoutY="190.0" prefHeight="200.0" prefWidth="270.0">
-        <columns>
-          <TableColumn prefWidth="183.99993896484375" text="Item Name" />
-          <TableColumn prefWidth="86.40005493164062" text="Category" />
-        </columns>
-      </TableView>
-      <TableView layoutX="547.0" layoutY="190.0" prefHeight="200.0" prefWidth="244.0">
-        <columns>
-          <TableColumn prefWidth="120.7999267578125" text="Price" />
-          <TableColumn prefWidth="122.4000244140625" text="Quantity" />
-        </columns>
-      </TableView>
-      <Button layoutX="302.0" layoutY="440.0" mnemonicParsing="false" style="-fx-background-color: #696969;" text="ADD INVENTARY" textFill="#efebeb" />
-      <Button layoutX="475.0" layoutY="440.0" mnemonicParsing="false" style="-fx-background-color: #696969;" text="SAVE INVENTARY" textFill="#efecec" />
-      <Button layoutX="642.0" layoutY="440.0" mnemonicParsing="false" style="-fx-background-color: #696969;" text="DELETE INVENTARY" textFill="#faf8f8" />
-   </children>
+<AnchorPane fx:id="ancCustomerManagement" style="-fx-background-color: fefefe;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ijse.ayurveda_skin_care.controller.InventaryManagementController">
+    <children>
+        <VBox alignment="TOP_CENTER" layoutX="80.0" layoutY="42.0" prefHeight="900.0" prefWidth="1325.0" spacing="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Label text="Inventory Item Management">
+                    <font>
+                        <Font name="Serif Bold" size="48.0" />
+                    </font>
+                </Label>
+                <HBox prefHeight="275.0" prefWidth="1325.0">
+                    <children>
+                        <VBox alignment="TOP_RIGHT" prefHeight="378.0" prefWidth="395.0" spacing="15.0">
+                            <children>
+                                <Label text="Inventory Item Id :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Name :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Description :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Quantity :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                    <padding>
+                                        <Insets top="5.0" />
+                                    </padding>
+                                </Label>
+                                <Label text="Last Maintenance Date :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Status :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                            <padding>
+                                <Insets right="10.0" top="10.0" />
+                            </padding>
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                        </VBox>
+                        <VBox prefHeight="455.0" prefWidth="552.0" spacing="9.0">
+                            <children>
+                                <Label fx:id="lblInventoryItemId" prefHeight="42.0" prefWidth="469.0" text="1">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font name="Serif Bold" size="18.0" />
+                                    </font>
+                                </Label>
+                                <TextField fx:id="txtName" style="-fx-background-radius: 10;">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font></TextField>
+                                <TextField fx:id="txtDescription" style="-fx-background-radius: 10;">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font></TextField>
+                                <TextField fx:id="txtQuantity" style="-fx-background-radius: 10;">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font></TextField>
+                                <TextField fx:id="txtLastMaintenanceDate" style="-fx-background-radius: 10;">
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font>
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                </TextField>
+                                <TextField fx:id="txtStatus" style="-fx-background-radius: 10;">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font></TextField>
+                            </children>
+                            <padding>
+                                <Insets left="10.0" right="30.0" />
+                            </padding>
+                        </VBox>
+                    </children>
+                </HBox>
+                <HBox alignment="TOP_CENTER" prefHeight="11.0" prefWidth="804.0" spacing="50.0">
+                    <children>
+                        <Button fx:id="btnSave" mnemonicParsing="false" onAction="#btnSaveOnAction" style="-fx-background-color: #27ae60; -fx-background-radius: 7;" text="Save" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font></Button>
+                        <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#btnUpdateOnAction" style="-fx-background-color: #2980b9; -fx-background-radius: 7;" text="Update" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font></Button>
+                        <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#btnDeleteOnAction" style="-fx-background-color: #e74c3c; -fx-background-radius: 7;" text="Delete" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font></Button>
+                        <Button fx:id="btnClear" mnemonicParsing="false" onAction="#btnClearOnAction" style="-fx-background-color: #130f40; -fx-background-radius: 7;" text="Clear" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font>
+                        </Button>
+                    </children></HBox>
+                <ScrollPane prefHeight="417.0" prefWidth="1325.0">
+                    <content>
+                        <TableView fx:id="tblInventoryItemList" onMouseClicked="#getData" prefHeight="417.0" prefWidth="1319.0">
+                            <columns>
+                                <TableColumn fx:id="colInventoryItemId" prefWidth="146.0" text="Inventory Item Id" />
+                                <TableColumn fx:id="colName" prefWidth="250.0" text="Name" />
+                                <TableColumn fx:id="colDescription" prefWidth="373.0" text="Description" />
+                                <TableColumn fx:id="colQuantity" prefWidth="197.0" text="Quantity" />
+                                <TableColumn fx:id="colLastMaintenanceDate" prefWidth="188.0" text="Last Maintenance Date" />
+                                <TableColumn fx:id="colStatus" prefWidth="136.0" text="Status" />
+                            </columns>
+                        </TableView>
+                    </content>
+                </ScrollPane>
+            </children>
+            <padding>
+                <Insets top="30.0" />
+            </padding>
+        </VBox>
+    </children>
 </AnchorPane>
