--- a/src/main/resources/view/EquipmentManagement.fxml
+++ b/src/main/resources/view/EquipmentManagement.fxml
@@ -121,15 +121,15 @@
                 </HBox>
                 <HBox alignment="TOP_CENTER" prefHeight="11.0" prefWidth="804.0" spacing="50.0">
                     <children>
-                        <Button fx:id="btnSave" mnemonicParsing="false" onAction="#btnSaveOnAction" style="-fx-background-color: #27ae60; -fx-background-radius: 7;" text="Save" textFill="WHITE">
+                        <Button fx:id="btnSave" mnemonicParsing="false" onAction="#btnSaveOnAction" style="-fx-background-color: #079992; -fx-background-radius: 7;" text="Save" textFill="WHITE">
                             <font>
                                 <Font name="Serif Bold" size="24.0" />
                             </font></Button>
-                        <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#btnUpdateOnAction" style="-fx-background-color: #2980b9; -fx-background-radius: 7;" text="Update" textFill="WHITE">
+                        <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#btnUpdateOnAction" style="-fx-background-color: #4834d4; -fx-background-radius: 7;" text="Update" textFill="WHITE">
                             <font>
                                 <Font name="Serif Bold" size="24.0" />
                             </font></Button>
-                        <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#btnDeleteOnAction" style="-fx-background-color: #e74c3c; -fx-background-radius: 7;" text="Delete" textFill="WHITE">
+                        <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#btnDeleteOnAction" style="-fx-background-color: #eb4d4b; -fx-background-radius: 7;" text="Delete" textFill="WHITE">
                             <font>
                                 <Font name="Serif Bold" size="24.0" />
                             </font></Button>
