--- a/src/main/resources/view/InventaryManagement.fxml
+++ b/src/main/resources/view/InventaryManagement.fxml
@@ -48,12 +48,23 @@
                                         <Insets top="5.0" />
                                     </padding>
                                 </Label>
-                                <Label text="Last Maintenance Date :">
-                                    <font>
-                                        <Font name="Serif Bold" size="20.0" />
-                                    </font>
-                                </Label>
-                                <Label text="Status :">
+                        <Label layoutX="294.0" layoutY="152.0" text="Unit Price :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                           <padding>
+                              <Insets top="5.0" />
+                           </padding>
+                        </Label>
+                        <Label layoutX="282.0" layoutY="201.0" text="Expiry Date :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                           <padding>
+                              <Insets top="5.0" />
+                           </padding>
+                        </Label>
+                                <Label text="Supplier Id :">
                                     <font>
                                         <Font name="Serif Bold" size="20.0" />
                                     </font>
@@ -66,7 +77,7 @@
                                 <Insets />
                             </HBox.margin>
                         </VBox>
-                        <VBox prefHeight="455.0" prefWidth="552.0" spacing="9.0">
+                        <VBox prefHeight="455.0" prefWidth="552.0" spacing="11.0">
                             <children>
                                 <Label fx:id="lblInventoryItemId" prefHeight="42.0" prefWidth="469.0" text="1">
                                     <padding>
@@ -97,7 +108,23 @@
                                     <font>
                                         <Font size="18.0" />
                                     </font></TextField>
-                                <TextField fx:id="txtLastMaintenanceDate" style="-fx-background-radius: 10;">
+                        <TextField fx:id="txtUnitPrice" layoutX="20.0" layoutY="149.0" style="-fx-background-radius: 10;">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="txtExpiryDate" layoutX="20.0" layoutY="193.0" style="-fx-background-radius: 10;">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                                <TextField fx:id="txtSupplierId" style="-fx-background-radius: 10;">
                                     <font>
                                         <Font size="18.0" />
                                     </font>
@@ -105,13 +132,6 @@
                                         <Insets top="10.0" />
                                     </padding>
                                 </TextField>
-                                <TextField fx:id="txtStatus" style="-fx-background-radius: 10;">
-                                    <padding>
-                                        <Insets top="10.0" />
-                                    </padding>
-                                    <font>
-                                        <Font size="18.0" />
-                                    </font></TextField>
                             </children>
                             <padding>
                                 <Insets left="10.0" right="30.0" />
@@ -141,14 +161,15 @@
                     </children></HBox>
                 <ScrollPane prefHeight="417.0" prefWidth="1325.0">
                     <content>
-                        <TableView fx:id="tblInventoryItemList" onMouseClicked="#getData" prefHeight="417.0" prefWidth="1319.0">
+                        <TableView fx:id="tblInventoryItemList" onMouseClicked="#getData" prefHeight="378.0" prefWidth="1490.0">
                             <columns>
                                 <TableColumn fx:id="colInventoryItemId" prefWidth="146.0" text="Inventory Item Id" />
                                 <TableColumn fx:id="colName" prefWidth="250.0" text="Name" />
                                 <TableColumn fx:id="colDescription" prefWidth="373.0" text="Description" />
-                                <TableColumn fx:id="colQuantity" prefWidth="197.0" text="Quantity" />
-                                <TableColumn fx:id="colLastMaintenanceDate" prefWidth="188.0" text="Last Maintenance Date" />
-                                <TableColumn fx:id="colStatus" prefWidth="136.0" text="Status" />
+                                <TableColumn fx:id="colQuantity" prefWidth="152.0" text="Quantity" />
+                                <TableColumn fx:id="colUnitPrice" prefWidth="160.0" text="Unit Price" />
+                                <TableColumn fx:id="colExpiryDate" prefWidth="209.0" text="Expiry Date" />
+                        <TableColumn fx:id="colSupplierId" prefWidth="156.0" text="Supplier Id" />
                             </columns>
                         </TableView>
                     </content>
