--- a/src/main/resources/view/SupplierManagement.fxml
+++ b/src/main/resources/view/SupplierManagement.fxml
@@ -1,14 +1,147 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="edu.ijse.ayurveda_skin_care.controller.SupplierManagementController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="ancSupplierManagement" style="-fx-background-color: fefefe;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ijse.ayurveda_skin_care.controller.SupplierManagementController">
+    <children>
+        <VBox alignment="TOP_CENTER" layoutX="80.0" layoutY="42.0" prefHeight="900.0" prefWidth="1325.0" spacing="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Label text="Supplier Management">
+                    <font>
+                        <Font name="Serif Bold" size="48.0" />
+                    </font>
+                </Label>
+                <HBox prefHeight="238.0" prefWidth="1325.0">
+                    <children>
+                        <VBox alignment="TOP_RIGHT" prefHeight="378.0" prefWidth="395.0" spacing="15.0">
+                            <children>
+                                <Label text="Supplier Id :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Name :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Email :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Phone :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                                <Label text="Address :">
+                                    <font>
+                                        <Font name="Serif Bold" size="20.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                            <padding>
+                                <Insets right="10.0" top="10.0" />
+                            </padding>
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                        </VBox>
+                        <VBox prefHeight="455.0" prefWidth="552.0" spacing="9.0">
+                            <children>
+                                <Label fx:id="lblSupplierId" prefHeight="42.0" prefWidth="469.0" text="1">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font name="Serif Bold" size="18.0" />
+                                    </font>
+                                </Label>
+                                <TextField fx:id="txtName" style="-fx-background-radius: 10;">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font></TextField>
+                                <TextField fx:id="txtEmail" style="-fx-background-radius: 10;">
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font>
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                </TextField>
+                                <TextField fx:id="txtPhone" style="-fx-background-radius: 10;">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font></TextField>
+                                <TextField fx:id="txtAddress" style="-fx-background-radius: 10;">
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font>
+                                </TextField>
+                            </children>
+                            <padding>
+                                <Insets left="10.0" right="30.0" />
+                            </padding>
+                        </VBox>
+                    </children>
+                </HBox>
+                <HBox alignment="TOP_CENTER" prefHeight="11.0" prefWidth="804.0" spacing="50.0">
+                    <children>
+                        <Button fx:id="btnSave" mnemonicParsing="false" onAction="#btnSaveOnAction" style="-fx-background-color: #079992; -fx-background-radius: 7;" text="Save" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font></Button>
+                        <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#btnUpdateOnAction" style="-fx-background-color: #4834d4; -fx-background-radius: 7;" text="Update" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font></Button>
+                        <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#btnDeleteOnAction" style="-fx-background-color: #eb4d4b; -fx-background-radius: 7;" text="Delete" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font></Button>
+                        <Button fx:id="btnClear" mnemonicParsing="false" onAction="#btnClearOnAction" style="-fx-background-color: #130f40; -fx-background-radius: 7;" text="Clear" textFill="WHITE">
+                            <font>
+                                <Font name="Serif Bold" size="24.0" />
+                            </font>
+                        </Button>
+                    </children></HBox>
+                <ScrollPane prefHeight="455.0" prefWidth="1325.0">
+                    <content>
+                        <TableView fx:id="tblSupplierList" onMouseClicked="#getData" prefHeight="455.0" prefWidth="1319.0">
+                            <columns>
+                                <TableColumn fx:id="colCustomerId" prefWidth="123.0" text="Customer Id" />
+                                <TableColumn fx:id="colName" prefWidth="252.0" text="Name" />
+                                <TableColumn fx:id="colEmail" prefWidth="305.0" text="Email" />
+                                <TableColumn fx:id="colPhone" prefWidth="228.0" text="Phone" />
+                                <TableColumn fx:id="colAddress" prefWidth="384.0" text="Address" />
+                            </columns>
+                        </TableView>
+                    </content>
+                </ScrollPane>
+            </children>
+            <padding>
+                <Insets top="30.0" />
+            </padding>
+        </VBox>
+    </children>
 </AnchorPane>
