--- a/src/main/resources/view/UserManagement.fxml
+++ b/src/main/resources/view/UserManagement.fxml
@@ -3,60 +3,223 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="631.0" prefWidth="837.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ijse.ayurveda_skin_care.controller.UserManagementController">
+<AnchorPane fx:id="ancTreatmentList" style="-fx-background-color: fefefe;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ijse.ayurveda_skin_care.controller.UserManagementController">
    <children>
-      <VBox prefHeight="631.0" prefWidth="210.0">
+      <VBox alignment="TOP_CENTER" layoutX="80.0" layoutY="42.0" prefHeight="900.0" prefWidth="1325.0" spacing="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fitHeight="154.0" fitWidth="217.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../OneDrive/Desktop/16.jpeg" />
-               </image>
-            </ImageView>
-            <HBox prefHeight="522.0" prefWidth="218.0" style="-fx-background-color: #696969;">
+            <Label text="User Management">
+               <font>
+                  <Font name="Serif Bold" size="48.0" />
+               </font>
+            </Label>
+            <HBox prefHeight="239.0" prefWidth="1325.0" style="-fx-border-width: 5; -fx-border-radius: 7;">
                <children>
-                  <Button mnemonicParsing="false" text="LOGOUT">
+                  <VBox alignment="TOP_RIGHT" prefHeight="475.0" prefWidth="413.0" spacing="15.0">
+                     <children>
+                        <Label text="User Id :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label text="Name :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                           <padding>
+                              <Insets top="-5.0" />
+                           </padding>
+                        </Label>
+                        <Label layoutX="324.0" layoutY="72.0" text="Phone :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                           <padding>
+                              <Insets top="-5.0" />
+                           </padding>
+                        </Label>
+                        <Label text="User Name :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label text="Password :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="304.0" layoutY="186.0" text="Email :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="342.0" layoutY="230.0" text="Age :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="364.0" layoutY="274.0" text="User Type Id :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="274.0" layoutY="318.0" text="Registration Date :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="224.0" layoutY="362.0" text="Status :">
+                           <font>
+                              <Font name="Serif Bold" size="20.0" />
+                           </font>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets right="10.0" top="10.0" />
+                     </padding>
                      <HBox.margin>
-                        <Insets left="80.0" top="450.0" />
+                        <Insets />
                      </HBox.margin>
-                  </Button>
+                  </VBox>
+                  <VBox prefHeight="455.0" prefWidth="552.0" spacing="9.0">
+                     <children>
+                        <Label fx:id="lblUserId" prefHeight="42.0" prefWidth="469.0" text="1">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="Serif Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtName" style="-fx-background-radius: 10;">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font></TextField>
+                        <TextField fx:id="txtPhone" layoutX="20.0" layoutY="69.0" style="-fx-background-radius: 10;">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="txtUserName" style="-fx-background-radius: 10;">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font></TextField>
+                        <TextField fx:id="txtPassword" style="-fx-background-radius: 10;">
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font></TextField>
+                        <TextField fx:id="txtEmail" layoutX="20.0" layoutY="193.0" style="-fx-background-radius: 10;">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="txtAge" layoutX="20.0" layoutY="237.0" style="-fx-background-radius: 10;">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="txtUserTypeId" layoutX="20.0" layoutY="281.0" style="-fx-background-radius: 10;">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="txtRegistrationDate" layoutX="20.0" layoutY="325.0" style="-fx-background-radius: 10;">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="txtStatus" layoutX="20.0" layoutY="369.0" style="-fx-background-radius: 10;">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                     <padding>
+                        <Insets left="10.0" right="30.0" />
+                     </padding>
+                  </VBox>
                </children>
             </HBox>
+            <HBox alignment="TOP_CENTER" prefHeight="11.0" prefWidth="804.0" spacing="50.0">
+               <children>
+                  <Button fx:id="btnSave" mnemonicParsing="false" onAction="#btnSaveOnAction" style="-fx-background-color: #079992; -fx-background-radius: 7;" text="Save" textFill="WHITE">
+                     <font>
+                        <Font name="Serif Bold" size="24.0" />
+                     </font></Button>
+                  <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#btnUpdateOnAction" style="-fx-background-color: #4834d4; -fx-background-radius: 7;" text="Update" textFill="WHITE">
+                     <font>
+                        <Font name="Serif Bold" size="24.0" />
+                     </font></Button>
+                  <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#btnDeleteOnAction" style="-fx-background-color: #eb4d4b; -fx-background-radius: 7;" text="Delete" textFill="WHITE">
+                     <font>
+                        <Font name="Serif Bold" size="24.0" />
+                     </font></Button>
+                  <Button fx:id="btnClear" mnemonicParsing="false" onAction="#btnClearOnAction" style="-fx-background-color: #130f40; -fx-background-radius: 7;" text="Clear" textFill="WHITE">
+                     <font>
+                        <Font name="Serif Bold" size="24.0" />
+                     </font>
+                  </Button>
+               </children></HBox>
+            <ScrollPane prefHeight="459.0" prefWidth="1325.0">
+               <content>
+                  <TableView fx:id="tblUserList" onMouseClicked="#getData" prefHeight="264.0" prefWidth="2093.0">
+                     <columns>
+                        <TableColumn fx:id="colUserId" prefWidth="123.0" text="User Id" />
+                        <TableColumn fx:id="colName" prefWidth="271.0" text="Name" />
+                        <TableColumn fx:id="colPhone" prefWidth="217.0" text="Phone " />
+                        <TableColumn fx:id="colUserName" prefWidth="229.0" text="User Name" />
+                        <TableColumn fx:id="colPassword" prefWidth="237.0" text="Password" />
+                        <TableColumn fx:id="colEmail" prefWidth="271.0" text="Email" />
+                        <TableColumn fx:id="colAge" prefWidth="112.0" text="Age" />
+                        <TableColumn fx:id="colUserTypeId" prefWidth="187.0" text="User Type Id" />
+                        <TableColumn fx:id="colRegistrationDate" prefWidth="254.0" text="Registration Date" />
+                        <TableColumn fx:id="colStatus" prefWidth="154.0" text="Status" />
+                     </columns>
+                  </TableView>
+               </content>
+            </ScrollPane>
          </children>
-         <opaqueInsets>
-            <Insets bottom="450.0" />
-         </opaqueInsets>
+         <padding>
+            <Insets top="30.0" />
+         </padding>
       </VBox>
-      <Label layoutX="302.0" layoutY="32.0" text="USER MANAGEMENT">
-         <font>
-            <Font name="System Bold" size="36.0" />
-         </font>
-      </Label>
-      <TextField layoutX="449.0" layoutY="114.0" prefHeight="26.0" prefWidth="349.0" promptText="SEARCH" />
-      <TableView layoutX="291.0" layoutY="216.0" prefHeight="200.0" prefWidth="342.0">
-        <columns>
-          <TableColumn prefWidth="240.80001831054688" text="NAME" />
-          <TableColumn prefWidth="101.5999755859375" text="ROLE" />
-        </columns>
-      </TableView>
-      <TableView layoutX="633.0" layoutY="216.0" prefHeight="200.0" prefWidth="150.0">
-        <columns>
-          <TableColumn prefWidth="150.4000244140625" text="CONTACT" />
-          <TableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
-        </columns>
-      </TableView>
-      <Button layoutX="324.0" layoutY="445.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="97.0" style="-fx-background-color: #696969;" text="ADD USER" textFill="#f4f2f2" />
-      <Button layoutX="482.0" layoutY="445.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="104.0" style="-fx-background-color: #696969;" text="SAVE USER" textFill="#f7efef" />
-      <Button layoutX="646.0" layoutY="445.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="104.0" style="-fx-background-color: #696969;" text="DELETE USER" textFill="#f7f1f1" />
    </children>
 </AnchorPane>
